tests/compiler/expected/output/IncorrectDimensions.shtk.txt
MODULE IncorrectDimensions.shtk
ERROR in Line 3 Col 35

    var a:int[3][3] = [[4, 5, 6], 1+2+3, [7, 8, 9]]
                                  ^
Type error, did not expect autoInt,
expected autoInt[3]

IncorrectDimensions.shtk:3:34
